<resources>
    <string name="app_name">Admin</string>
    <string name="title_activity_home">Admin</string>

    <string name="navigation_drawer_open">Drawer opened</string>
    <string name="navigation_drawer_close">Drawer closed</string>


    <string name="btn_save">Save</string>
    <string name="btnAdd">Add</string>
    <string name="link_image">drawer link image</string>
    <string name="btnEditDesc">Edit description</string>
    <string name="btnDeleteDesc">Delete button</string>
    <string name="action_filter">filter</string>
    <string name="action_sort">sort</string>
    <string name="action_settings">settings</string>
    <string name="category">Category</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="filter">Filter</string>
    <string name="action_reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="lbl_tnc">By signing up you accept our terms and conditions</string>
    <string name="btn_signUp">Sign up</string>
    <string name="hint_username">Email / Mobile</string>
    <string name="btn_login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_name">Name</string>
</resources>
